[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/anima/shapes/Rectangle.gd" type="Script" id=1]
[ext_resource path="res://menu/Button.gd" type="Script" id=2]

[sub_resource type="ButtonGroup" id=1]

[node name="Button" type="Button"]
margin_bottom = 20.0
mouse_default_cursor_shape = 2
toggle_mode = true
group = SubResource( 1 )
text = "High"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimaRectangle" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
rect = Rect2( 0, 0, 100, 100 )
values_in = 1
is_filled = true
border_color = Color( 0.619608, 0.619608, 0.619608, 1 )
border_radius = 4

[node name="Label" type="Label" parent="AnimaRectangle"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="." to="." method="_on_High_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_High_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_High_focus_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_High_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
[connection signal="toggled" from="." to="." method="_on_Button_toggled"]
